chore: wip acceptance test for snowflake