@@ -6,62 +6,198 @@ package io.airbyte.integrations.destination.snowflake;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import io.airbyte.commons.io.IOs;
 import io.airbyte.commons.json.Jsons;
 import io.airbyte.commons.resources.MoreResources;
+import io.airbyte.commons.string.Strings;
 import io.airbyte.configoss.StandardCheckConnectionOutput;
 import io.airbyte.configoss.StandardCheckConnectionOutput.Status;
+import io.airbyte.db.factory.DataSourceFactory;
+import io.airbyte.db.jdbc.JdbcDatabase;
+import io.airbyte.integrations.base.DestinationConfig;
+import io.airbyte.integrations.base.JavaBaseConstants;
+import io.airbyte.integrations.destination.NamingConventionTransformer;
 import io.airbyte.integrations.standardtest.destination.argproviders.DataArgumentsProvider;
-import io.airbyte.protocol.models.v0.AirbyteCatalog;
-import io.airbyte.protocol.models.v0.AirbyteMessage;
-import io.airbyte.protocol.models.v0.AirbyteRecordMessage;
-import io.airbyte.protocol.models.v0.CatalogHelpers;
-import io.airbyte.protocol.models.v0.ConfiguredAirbyteCatalog;
+import io.airbyte.integrations.standardtest.destination.comparator.TestDataComparator;
+import io.airbyte.protocol.models.v0.*;
+
 import java.nio.file.Path;
-import java.util.List;
+import java.sql.ResultSet;
+import java.sql.SQLException;
+import java.util.*;
 import java.util.stream.Collectors;
+
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ArgumentsSource;
 
+import javax.sql.DataSource;
+
 public class SnowflakeBulkLoadDestinationAcceptanceTest extends SnowflakeInsertDestinationAcceptanceTest {
+
+  private static final NamingConventionTransformer NAME_TRANSFORMER = new SnowflakeSQLNameTransformer();
+
+  // this config is based on the static config, and it contains a random
+  // schema name that is different for each test run
+  private JsonNode config;
+  private JdbcDatabase database;
+  private DataSource dataSource;
 
   public JsonNode getStaticConfig() {
     return Jsons.deserialize(IOs.readFile(Path.of("secrets/bulk_load_config.json")));
   }
 
-  @ParameterizedTest
-  @ArgumentsSource(DataArgumentsProvider.class)
-  public void testSyncWithNormalizationWithKeyPairAuth(final String messagesFilename, final String catalogFilename) throws Exception {
-    testSyncWithNormalizationWithKeyPairAuth(messagesFilename, catalogFilename, "secrets/config_key_pair.json");
+  @BeforeEach
+  public void setup() {
+    DestinationConfig.initialize(getConfig());
   }
 
-  @ParameterizedTest
-  @ArgumentsSource(DataArgumentsProvider.class)
-  public void testSyncWithNormalizationWithKeyPairEncrypt(final String messagesFilename, final String catalogFilename) throws Exception {
-    testSyncWithNormalizationWithKeyPairAuth(messagesFilename, catalogFilename, "secrets/config_key_pair_encrypted.json");
+  @Override
+  protected String getImageName() {
+    return "airbyte/destination-snowflake:dev";
   }
 
-  private void testSyncWithNormalizationWithKeyPairAuth(final String messagesFilename, final String catalogFilename, final String configName)
-      throws Exception {
-    if (!normalizationFromDefinition()) {
-      return;
+  @Override
+  protected JsonNode getConfig() {
+    return config;
+  }
+
+  @Override
+  protected TestDataComparator getTestDataComparator() {
+    return new SnowflakeTestDataComparator();
+  }
+
+  @Override
+  protected boolean supportBasicDataTypeTest() {
+    return true;
+  }
+
+  @Override
+  protected boolean supportArrayDataTypeTest() {
+    return true;
+  }
+
+  @Override
+  protected boolean supportObjectDataTypeTest() {
+    return true;
+  }
+
+  protected boolean supportsInDestinationNormalization() {
+    return true;
+  }
+
+  @Override
+  protected JsonNode getFailCheckConfig() {
+    final JsonNode invalidConfig = Jsons.clone(config);
+    ((ObjectNode) invalidConfig.get("credentials")).put("password", "wrong password");
+    return invalidConfig;
+  }
+
+  @Override
+  protected List<JsonNode> retrieveRecords(final TestDestinationEnv env,
+                                           final String streamName,
+                                           final String namespace,
+                                           final JsonNode streamSchema)
+          throws Exception {
+    return retrieveRecordsFromTable(NAME_TRANSFORMER.getRawTableName(streamName), NAME_TRANSFORMER.getNamespace(namespace))
+            .stream()
+            .map(r -> r.get(JavaBaseConstants.COLUMN_NAME_DATA.toUpperCase()))
+            .collect(Collectors.toList());
+  }
+
+  @Override
+  protected boolean implementsNamespaces() {
+    return true;
+  }
+
+  @Override
+  protected boolean supportNamespaceTest() {
+    return true;
+  }
+
+  @Override
+  protected Optional<NamingConventionTransformer> getNameTransformer() {
+    return Optional.of(NAME_TRANSFORMER);
+  }
+
+  @Override
+  protected List<JsonNode> retrieveNormalizedRecords(final TestDestinationEnv testEnv, final String streamName, final String namespace)
+          throws Exception {
+    final String tableName = NAME_TRANSFORMER.getIdentifier(streamName);
+    final String schema = NAME_TRANSFORMER.getNamespace(namespace);
+    return retrieveRecordsFromTable(tableName, schema);
+  }
+
+  private List<JsonNode> retrieveRecordsFromTable(final String tableName, final String schema) throws SQLException {
+    final TimeZone timeZone = TimeZone.getTimeZone("UTC");
+    TimeZone.setDefault(timeZone);
+
+    return database.bufferedResultSetQuery(
+            connection -> {
+              try (final ResultSet tableInfo = connection.createStatement()
+                      .executeQuery(String.format("SHOW TABLES LIKE '%s' IN SCHEMA %s;", tableName, schema))) {
+                assertTrue(tableInfo.next());
+                // check that we're creating permanent tables. DBT defaults to transient tables, which have
+                // `TRANSIENT` as the value for the `kind` column.
+                assertEquals("TABLE", tableInfo.getString("kind"));
+                connection.createStatement().execute("ALTER SESSION SET TIMEZONE = 'UTC';");
+                return connection.createStatement()
+                        .executeQuery(String.format("SELECT * FROM %s.%s ORDER BY %s ASC;", schema, tableName, JavaBaseConstants.COLUMN_NAME_EMITTED_AT));
+              }
+            },
+            new SnowflakeTestSourceOperations()::rowToJson);
+  }
+
+  // for each test we create a new schema in the database. run the test in there and then remove it.
+  @Override
+  protected void setup(final TestDestinationEnv testEnv, final HashSet<String> TEST_SCHEMAS) throws Exception {
+    final String schemaName = Strings.addRandomSuffix("integration_test", "_", 5);
+    final String createSchemaQuery = String.format("CREATE SCHEMA %s", schemaName);
+    TEST_SCHEMAS.add(schemaName);
+
+    this.config = Jsons.clone(getStaticConfig());
+    ((ObjectNode) config).put("schema", schemaName);
+
+    dataSource = SnowflakeDatabase.createDataSource(config, OssCloudEnvVarConsts.AIRBYTE_OSS);
+    database = SnowflakeDatabase.getDatabase(dataSource);
+    database.execute(createSchemaQuery);
+  }
+
+  @Override
+  protected void tearDown(final TestDestinationEnv testEnv) throws Exception {
+    TEST_SCHEMAS.add(config.get("schema").asText());
+    for (final String schema : TEST_SCHEMAS) {
+      // we need to wrap namespaces in quotes, but that means we have to manually upcase them.
+      // thanks, v1 destinations!
+      // this probably doesn't actually work, because v1 destinations are mangling namespaces and names
+      // but it's approximately correct and maybe works for some things.
+      final String mangledSchema = schema.toUpperCase();
+      final String dropSchemaQuery = String.format("DROP SCHEMA IF EXISTS \"%s\"", mangledSchema);
+      database.execute(dropSchemaQuery);
     }
 
+    DataSourceFactory.close(dataSource);
+  }
+
+  @ParameterizedTest
+  @ArgumentsSource(DataArgumentsProvider.class)
+  public void testSyncWithTestFiles(final String messagesFilename, final String catalogFilename) throws Exception {
     final AirbyteCatalog catalog = Jsons.deserialize(MoreResources.readResource(catalogFilename), AirbyteCatalog.class);
     final ConfiguredAirbyteCatalog configuredCatalog = CatalogHelpers.toDefaultConfiguredCatalog(catalog);
     final List<AirbyteMessage> messages = MoreResources.readResource(messagesFilename).lines()
-        .map(record -> Jsons.deserialize(record, AirbyteMessage.class)).collect(Collectors.toList());
+            .map(record -> Jsons.deserialize(record, AirbyteMessage.class)).toList();
 
-    final JsonNode config = Jsons.deserialize(IOs.readFile(Path.of(configName)));
-    runSyncAndVerifyStateOutput(config, messages, configuredCatalog, true);
+    final List<AirbyteMessage> largeNumberRecords =
+            Collections.nCopies(1000, messages).stream().flatMap(List::stream).collect(Collectors.toList());
 
-    final String defaultSchema = getDefaultSchema(config);
-    final List<AirbyteRecordMessage> actualMessages = retrieveNormalizedRecords(catalog, defaultSchema);
-    assertSameMessages(messages, actualMessages, true);
+    final JsonNode config = getConfig();
+    runSyncAndVerifyStateOutput(config, largeNumberRecords, configuredCatalog, false);
   }
 
 }
